<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="36dp"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/foregroundService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/stopForegroundService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:textAllCaps="false"
        android:backgroundTint="@android:color/holo_red_dark"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/jobScheduler"
        android:text="@string/job_scheduler"
        android:textAllCaps="false"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/jobIntentService"
        android:text="@string/job_intent_service"
        android:textAllCaps="false"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/workManager"
        android:text="@string/work_manager"
        android:textAllCaps="false"
        />



</LinearLayout>